Make tip consistent with theme and fix dark mode background

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -137,8 +137,54 @@ body {
   background: var(--background-color);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
+
 }
 
+
+.mapboxgl-popup-anchor-top .mapboxgl-popup-tip {
+  align-self:center;
+  border-bottom-color:var(--background-color) !important;
+  border-top:none
+}
+.mapboxgl-popup-anchor-top-left .mapboxgl-popup-tip {
+  align-self:flex-start;
+  border-bottom-color:var(--background-color) !important;
+  border-left:none;
+  border-top:none
+}
+.mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip {
+  align-self:flex-end;
+  border-bottom-color:var(--background-color) !important;
+  border-right:none;
+  border-top:none
+}
+.mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip {
+  align-self:center;
+  border-bottom:none;
+  border-top-color:var(--background-color) !important;
+}
+.mapboxgl-popup-anchor-bottom-left .mapboxgl-popup-tip {
+  align-self:flex-start;
+  border-bottom:none;
+  border-left:none;
+  border-top-color:var(--background-color) !important;
+}
+.mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-tip {
+  align-self:flex-end;
+  border-bottom:none;
+  border-right:none;
+  border-top-color:var(--background-color) !important;
+}
+.mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
+  align-self:center;
+  border-left:none;
+  border-right-color:var(--background-color) !important;
+}
+.mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
+  align-self:center;
+  border-left-color:var(--background-color) !important;
+  border-right:none
+}
 
 .mapboxgl-popup-close-button {
   background-color: indianred !important;
